"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

BRANCH CHECKLIST: code review TODO/FIXME through all prsim code!

2008-11-01	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-15a: (srcdir only tag)
	  Moved many methods of unique_process_subgraph into 
		process_sim_state, where it makes more sense, 
		thereby simplifying many function calls.  


	* HACKT-00-01-04-main-00-82-32-prsim-10-15:
	  Eliminated process_type_map, folded type reference into
		process_sim_state union member, type_ref.
		More clean-up transformations to come...


	* HACKT-00-01-04-main-00-82-32-prsim-10-14:
	  Cleaned up implementation of bool frame lookup without having
		to always check for special case pid=0 (top-level), 
		simplifying code, making less error prone.  
		Added some global_entry methods to help with this.
		Could re-factor out repetitive calls to get_frame_map still...
	  Only test differences in fanin/fanout print formatting.


2008-10-31	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-13:
	  Fixed bug with propagating wrong pull-state to root, as returned
		by ::evaluate(), fixing a few tests with unstable-dequeue.
	  Fixed bug with improper searching through top-level nodes with
		wrong frame map.  Considering a better fix next...


2008-10-29	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-12+:
	  Fixed formatting of State::__root_why analysis.  
	  Known bug remaining: some tests outputs have dropped subtrees
		of why-analysis, a few unstable diagnostics differ, 
		see test/prsim/prsimrcdiffs.


2008-10-28	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-12:
	  prsim: fix get_delay_up/dn assertion, but would still like to
		automatically find the appropriate delay based on fanin-get